--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,29 @@
   padding: 0;
   box-sizing: border-box;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  /* background-color: lightgray; */
 }
 
 .header{
   display: flex;
   justify-content: space-around;
+  /* border: 1px solid #ccc; */
+  width: 90%;
+  margin: auto;
   
 }
 ul{
   list-style: none;
   display: flex;
- 
+ /* border: 1px solid #ccc; */
   justify-content: space-evenly;
   float: right;
   width: 40%;
   margin: 0px 250px 0% 0;
   margin-top: 35px;
+  
 font-size: 17px;
 font-weight: bold;
-font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 
@@ -31,7 +35,7 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   width: 100px;
   background-size: 100% 100%;
   margin-top: 30px;
-  /* border: 1px solid black; */
+ 
 }
 .content{
    /* border: 1px solid black; */
@@ -39,6 +43,9 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    height: 40vh;
    margin-top: 30vh;
    margin-left: 25vh;
+   display: flex; 
+   justify-content: space;
+
   
 }
 
@@ -46,47 +53,85 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin-bottom: 30px;
 }
 
+
+
 button {
-  padding: 0.8em 1.8em;
-  border: 2px solid #000000;
+  width: 9em;
+  height: 3em;
+  border-radius: 30em;
+  font-size: 15px;
+  font-family: inherit;
+  border: none;
   position: relative;
   overflow: hidden;
-  background-color: transparent;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 12px;
-  transition: .3s;
   z-index: 1;
-  font-weight: bold;
-  color: black;
-  width: 140px;
-  height: 40px;
-  margin: 4px;
-  border-radius: 8px;
-
-  
-
+  box-shadow: 6px 6px 12px #c5c5c5,
+              -6px -6px 12px #ffffff;
+              font: bold 17px/1.4 'Open Sans', arial, sans-serif;
+              margin-right: 8px;
  }
  
  button::before {
   content: '';
   width: 0;
-  height: 300%;
+  height: 3em;
+  border-radius: 30em;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(45deg);
-  background: #17C3B2;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
   transition: .5s ease;
   display: block;
   z-index: -1;
  }
  
  button:hover::before {
-  width: 105%;
+  width: 9em;
  }
- 
- button:hover {
-  color: #111;
- }
- 
+
+ ul { 
+  margin: 10px auto 0; 
+  padding: 0; 
+  list-style: none; 
+  display: table;
+  width: 600px;
+  text-align: center;
+}
+li { 
+  display: table-cell; 
+  position: relative; 
+  padding: 15px 0;
+}
+a {
+  color: #000;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: 0.15em;
+  
+  display: inline-block;
+  padding: 15px 20px;
+  position: relative;
+}
+a:after {    
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #000;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+a:hover:after { 
+  width: 100%; 
+  left: 0; 
+
+}
+@media screen and (max-height: 300px) {
+	ul {
+		margin-top: 40px;
+	}
+}
+
