--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -3,7 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #D8DEDE;
+   
+   
+  }
+  body{
+    height: 10px;
+    background-image: linear-gradient( 68.4deg,  rgba(99,251,215,1) -0.4%, rgba(5,222,250,1) 100.2% );
   }
 
   .header{
@@ -15,7 +20,13 @@
     margin: auto;
     align-items: center;
   
+  
   }
+  .container_first{
+    height: 100vh;
+    /* border: 1px solid black; */
+  }
+
   ul{
     list-style: none;
     display: flex;
@@ -26,10 +37,12 @@
     width: 40%;
   font-size: 17px;
   font-weight: bold;
+  
   }
   
   .logo img{
     height: 60px;
+    
   }
   /* .logo{
 
@@ -44,7 +57,7 @@
      display: flex; 
      justify-content: space;
      align-items: center;
-     
+ 
     
   }
   .content{
@@ -52,6 +65,7 @@
     justify-content: space-between;
     width: 80%;
    margin: auto;
+   
   }
 
   .content1{
@@ -65,6 +79,8 @@
   .picture img{
     /* border: 1px solid black; */
     height: 120vh;
+    object-fit: cover; 
+    clip-path: inset(180px 0 55px 0);
   }
   
   .typewrite
