--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -1,21 +1,10 @@
-.loading {
-    position: relative;
-    width: 100%;
-    height: 10px;
-    background-color: #f0f0f0;
-    border-radius: 5px;
-    overflow: hidden;
-  }
+.skill_about{
+  text-align: center;
+}
 
-  .loading-bar {
-    height: 100%;
-    background-color: #007bff;
-  }
+
+.box{
+  display: flex;
+  justify-content: space-evenly;
   
-  .loading-text {
-    text-align: center;
-    margin-top: 10px;
-    font-size: 14px;
-    color: #333;
-  }
-  
+}
