--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,44 +1,76 @@
 .about-container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
-    padding: 50px;
-    /* border: 1px solid black; */
+   
+    /* padding: 50px; */
+    width: 80%;
+    /* border: 5px solid black; */
+    margin: auto;
+   
+    background-color: #fff;
   }
   .about-container img{
-    height: 300px;
+    height: 550px;
+    width: 450px;
+    
   }
   .about-content {
-    margin-left: 30px;
-    width: 50%;
-    
+    margin-right: 30vh;
+    width: 40%;
+    /* border: 5px solid black; */
+    padding-top: 20px;
   }
   .gap-box{
     /* border: 1px solid black; */
-    height: 150px;
-    background-color:#333;
+    height: 180px;
+    background-color:#f8f9fb;
+    /* margin-bottom: 20px; */
   }
-  
-  .about-content h2 {
-    font-size: 24px;
-    color: #333;
+
+  .about-content h2{
+    font-size: 35px;
+    font-weight: bold;
+    
   }
   
   .about-content p {
     font-size: 16px;
-    color: #666;
+    color: #000;
     line-height: 1.6;
     width: fit-content;
   }
-  
-  .about-content h3 {
+  .name1{
+    display: flex;
+    /* flex-direction: column; */
+    width: 110%;
+    /* border: 1px solid black; */
+    font-weight: bold;
+    
+  }
+  .name1 p{
+    color: #adb491;
+    /* border: 1px solid black; */
+    
+    width: 40vh;
+     font-size: 18px;
+   
+    
+  }
+  .name {
+  display: flex;
+  flex-direction: column;
+   /* border: 1px solid black; */
+   width: 100vh;
+   
+  }
+  .name1 h3{
+    /* border: 1px solid black; */
+    width: 10vh;
     font-size: 18px;
-    color: #333;
   }
   
-  .about-content h3 span {
-    color: #007bff;
-  }
+
   
   .about-content img {
     width: 250px;
@@ -47,29 +79,34 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
   .about-content h3{
-    margin-bottom: 10px;
+    margin-bottom: 8px;
   }
-  .details {
-    display: flex;
-    flex-direction: column;
+
+  .details span{
+    /* border: 1px solid black; */
+    font-weight: bold;
+    font-size: 18px;
   }
   
   .details > div {
     display: flex;
     margin-bottom: 10px;
+    
   }
   
   .details h3 {
-    margin-right: 10px;
+    margin-right: 30px;
+    /* border: 1px solid black; */
   }
   
   .interests span {
-    margin-right: 10px;
+    margin-right: 15px;
    
   }
   
   .interests span svg {
     vertical-align: middle;
-    margin-right: 5px;
+    margin-right: 15px;
+    color: #adb491;
   }
   
