--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,70 +1,136 @@
-.form {
-    display: flex;
-    flex-direction: column;
-    align-self: center;
-    font-family: inherit;
-    gap: 10px;
-    padding-inline: 2em;
-    padding-bottom: 0.4em;
-    background-color:lavender;
-    border-radius: 20px;
-    width: 30%;
-    margin: auto;
-  }
-  
-  .form-heading {
+
+
+.contact-head h1{
+    margin-bottom: 25px;
+}
+
+.contact-head{
     text-align: center;
-    margin: 2em;
-    color: #000;
-    font-size: 1.2em;
-    background-color: transparent;
-    align-self: center;
+    margin:70px 0px 90px 0px;
+    /* border: 5px solid black; */
+   
   }
+.form-container {
+    width: 80%;
+    /* max-width: 300px;  */
+    margin-left: 50%; /* Shift the form to the left */
+    transform: translateX(-50%); /* Adjust to center horizontally */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Add box shadow */
+    
+}
+.container{
+    display: flex;
+    justify-content: space-between;
+    width: 76%;
+    margin: auto;
   
-  .form-field {
+    /* border: 5px solid black; */
+}
+form {
+    width: 60%;
+    height: fit-content;
+    padding: 60px; /* Add padding to the form */
+    background-color: #f8f9fb;
+     /* border: 5px solid black; */
+}
+.form-details{
+
+    height: 50vh;
+    width: 60vh;
+    /* border: 5px solid black; */
+}
+.info{
+    margin: 0 0px 50px 30px;
     display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 0.5em;
-    border-radius: 10px;
-    padding: 0.6em;
-    border: none;
-    outline: none;
-    color: black;
-    background-color: white;
-    border: 2px solid #000;
-    /* box-shadow: inset 2px 5px 10px rgb(5, 5, 5); */
-  }
   
-  .input-field {
-    background: none;
-    border: none;
-    outline: none;
-    width: 100%;
+}
+.info p{
+     /* border: 5px solid black; */
+     width: max-content;
+     margin: 0 0px 0px 30px;
+     color: #b3b698;
+     font-weight: bold;
+}
+.field {
+    margin-bottom: 16px; /* Add margin bottom to the fields
+     */
+     border: 2px solid #b3b698;
+}
+
+label,
+[placeholder] {
+    color: #555;
+}
+
+label i {
+    margin-right: 10px;
+}
+
+.field:focus-within label {
     color: #000;
-    padding-inline: 1em;
-  }
-  
-  .sendMessage-btn {
+    letter-spacing: 2px;
+}
+
+input,
+textarea {
+    width: calc(100% - 16px); /* Adjust width of inputs */
+    padding: 8px; /* Add padding to inputs */
+    background: rgba(255, 255, 255, 0.5);
+    border: none;
+    border-radius: 4px;
+}
+
+input:focus,
+textarea:focus {
+    background: rgba(255, 255, 255, 1);
+    outline: none;
+}
+
+textarea {
+    resize: none;
+}
+
+button {
+    width: 40%;
+    padding: 8px 0; /* Adjust padding of the button */
+    background: #b3b698;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-    margin-bottom: 3em;
-    padding: 1em;
-    /* border-radius: 10px; */
-    border: none;
-    outline: none;
-    background-color: transparent;
-    color: #000;
+    height: 45px;
     font-weight: bold;
-    outline: 1px solid #64ffda;
-    transition: all ease-in-out 0.3s;
-  }
-  
-  .sendMessage-btn:hover {
-    transition: all ease-in-out 0.3s;
-    background-color: #64ffda;
+    font-size: 14px;
+}
+
+button:hover {
+    letter-spacing: 2px;
+    box-shadow: none;
+}
+
+.social-media {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 40%;
+}
+
+.social-media span {
+    font-size: 16px;
+}
+
+.social-media span .fas {
+    margin-left: 10px;
+}
+
+.social-media a {
     color: #000;
-    cursor: pointer;
-    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
-  }
-  
- 
+    font-size: 20px;
+}
+
+@media (max-width: 425px) {
+    .form-container {
+        width: 90%;
+    }
+}
