--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,14 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 *{
+
+
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-   
-   
+    font-family: "Open Sans", sans-serif;
   }
+
+
   body{
     height: 10px;
-    background-image: linear-gradient( 68.4deg,  rgba(99,251,215,1) -0.4%, rgba(5,222,250,1) 100.2% );
+   background-color: #fff;
+   
   }
 
   .header{
@@ -25,6 +29,7 @@
   .container_first{
     height: 100vh;
     /* border: 1px solid black; */
+    
   }
 
   ul{
@@ -93,22 +98,27 @@
  height: 80px;
  margin-bottom: 80px;
   }
-  
-  button {
+  #tnd-button{
+    background-color: #fff;
+    color: #b3b698;
+    border: 2px solid #b3b698;
     width: 9em;
+  }
+  .my-button button {
+    width: 8em;
     height: 3em;
-    border-radius: 30em;
+    border-radius: 5px;
     font-size: 15px;
     font-family: inherit;
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
     position: relative;
     overflow: hidden;
     z-index: 1;
-    box-shadow: 6px 6px 12px #c5c5c5,
-                -6px -6px 12px gray;
+    box-shadow: 2px 2px 6px #b89696,
+                -6px -6px 12px rgb(245, 232, 232);
                 font: bold 17px/1.4 'Open Sans', arial, sans-serif;
                 margin-right: 10px;
-                background-color: whitesmoke;
+                background-color: #b3b698;
                 margin-top: 20px;
    }
    
@@ -120,7 +130,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-image: linear-gradient(to right, #0fd850 0%, #f9f047 100%);
+   
     transition: .5s ease;
     display: block;
     z-index: -1;
@@ -129,7 +139,7 @@
    button:hover::before {
     width: 9em;
    }
-  
+
    ul { 
     margin: 10px auto 0; 
     padding: 0; 
@@ -147,8 +157,6 @@
     color: #000;
     text-transform: uppercase;
     text-decoration: none;
-    letter-spacing: 0.15em;
-    
     display: inline-block;
     padding: 15px 20px;
     position: relative;
@@ -161,7 +169,7 @@
     height: 2px;
     left: 50%;
     position: absolute;
-    background: #000;
+    background: #b3b698;
     transition: width 0.3s ease 0s, left 0.3s ease 0s;
     width: 0;
   }
