--- a/src/Components/Skills/Skills.css
+++ b/src/Components/Skills/Skills.css
@@ -1,5 +1,6 @@
 .skill_about{
   text-align: center;
+  background-color: #f8f9fb;
 }
 
 
@@ -7,4 +8,16 @@
   display: flex;
   justify-content: space-evenly;
   
+}
+
+.skill_about section{
+
+  margin: 80px 0 40px 0;
+  font-size: 40px;
+  font-weight: bold;
+}
+.skill_about p{
+  margin-bottom: 70px;
+  /* border: 1px solid black; */
+  font-size: 20px;
 }
